dist_man1_MANS=

if BUILD_RINGD
  dist_man1_MANS+=ringd.1
endif

if ENABLE_QT
  dist_man1_MANS+=ring-qt.1
endif

if BUILD_RING_CLI
  dist_man1_MANS+=ring-cli.1
endif

if BUILD_RING_TX
  dist_man1_MANS+=ring-tx.1
endif

if ENABLE_WALLET
if BUILD_RING_WALLET
  dist_man1_MANS+=ring-wallet.1
endif
endif
